Fixed some typos and added changed some variable and method names, so they can be more descriptive. Fixed some issues with the design after testing .apk file on my own phone. Added to files for easy drop-in widgets that can be used to style buttons and simple text avoiding use of Themes for such a small project. Plane to add milk preferences after the sugar.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,4 +5,5 @@
     },
     "editor.defaultFormatter": "Dart-Code.flutter",
     "notebook.defaultFormatter": "Dart-Code.flutter",
+    "dart.flutterSdkPath": "~/dev/flutter",
 }
